--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <hr>
 
         <!-- Preview Image -->
-        <img class="img-fluid rounded" src="image.jpg" alt="25 Celebs Who Are Shockingly Turning 50"> <!--Github Image source and alt text -->
+        <img class="img-fluid rounded" src="celebrity.jpg" alt="25 Celebs Who Are Shockingly Turning 50"> <!--Github Image source and alt text -->
 
         <hr>
 
